--- a/src/numerical/advection/CMakeLists.txt
+++ b/src/numerical/advection/CMakeLists.txt
@@ -1,5 +1,9 @@
-add_library(advec OBJECT advec.f90)
-target_link_libraries(advec PRIVATE const grid meshobj)
+add_library(advec OBJECT advec.f90
+$<TARGET_OBJECTS:grid>
+)
+target_link_libraries(advec PRIVATE const meshobj)
 
-add_library(advec_mpi OBJECT advec_mpi.f90)
-target_link_libraries(advec_mpi PRIVATE const mpimod grid meshobj)
+add_library(advec_mpi OBJECT advec_mpi.f90
+$<TARGET_OBJECTS:grid>
+)
+target_link_libraries(advec_mpi PRIVATE const mpimod meshobj)
