--- a/src/numerical/diffusion/CMakeLists.txt
+++ b/src/numerical/diffusion/CMakeLists.txt
@@ -3,5 +3,7 @@ set_directory_properties(PROPERTIES LABELS diffusion)
 add_library(PDEparabolic OBJECT PDEparabolic.f90)
 target_link_libraries(PDEparabolic PRIVATE const gbsv)
 
-add_library(diffusion OBJECT diffusion.f90)
-target_link_libraries(diffusion PRIVATE const grid meshobj PDEparabolic)
+add_library(diffusion OBJECT diffusion.f90
+$<TARGET_OBJECTS:grid>
+)
+target_link_libraries(diffusion PRIVATE const meshobj PDEparabolic)
