--- a/test/coord/CMakeLists.txt
+++ b/test/coord/CMakeLists.txt
@@ -25,7 +25,7 @@ add_test(NAME fullgrid_dipole_testdriver COMMAND fullgrid_dipole_testdriver)
 
 add_executable(fullgrid_dipole_regen fullgrid_dipole_regen.f90
 )
-target_link_libraries(fullgrid_dipole_regen PRIVATE grid reader newton spherical geomagnetic meshobj_dipole meshobj const
+target_link_libraries(fullgrid_dipole_regen PRIVATE grid reader newton spherical geomagnetic meshobj_dipole meshobj_cart meshobj const
 h5fortran::h5fortran
 $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
 ffilesystem::filesystem
