--- a/src/temporal/CMakeLists.txt
+++ b/src/temporal/CMakeLists.txt
@@ -3,7 +3,11 @@ set_directory_properties(PROPERTIES LABELS temporal)
 add_library(timeutils OBJECT timeutils.f90)
 target_link_libraries(timeutils PRIVATE const)
 
-add_library(temporal OBJECT temporal.f90)
-target_link_libraries(temporal PRIVATE gemini3d_config const meshobj mpimod
+add_library(temporal_mpi OBJECT temporal_mpi.f90)
+target_link_libraries(temporal_mpi PRIVATE gemini3d_config const meshobj mpimod
 MPI::MPI_Fortran
 )
+
+add_library(temporal OBJECT temporal.f90)
+target_link_libraries(temporal PRIVATE const)
+
