--- a/src/numerical/coord/CMakeLists.txt
+++ b/src/numerical/coord/CMakeLists.txt
@@ -1,4 +1,4 @@
-set_directory_properties(PROPERTIES LABELS coord)
+set_property(DIRECTORY PROPERTY  LABELS coord)
 
 add_library(newton OBJECT newton.f90)
 target_link_libraries(newton PRIVATE const)
@@ -12,8 +12,12 @@ target_link_libraries(geomagnetic PRIVATE const)
 add_library(meshobj OBJECT meshobj.f90)
 target_link_libraries(meshobj PRIVATE const geomagnetic spherical h5fortran::h5fortran)
 
-add_library(meshobj_dipole OBJECT meshobj_dipole.f90 dipole_fns.f90)
-target_link_libraries(meshobj_dipole PRIVATE const meshobj newton spherical geomagnetic)
+add_library(meshobj_dipole OBJECT meshobj_dipole.f90 dipole_fns.f90
+$<TARGET_OBJECTS:meshobj>
+)
+target_link_libraries(meshobj_dipole PRIVATE const newton spherical geomagnetic)
 
-add_library(meshobj_cart OBJECT meshobj_cart.f90)
-target_link_libraries(meshobj_cart PRIVATE const meshobj spherical geomagnetic)
+add_library(meshobj_cart OBJECT meshobj_cart.f90
+$<TARGET_OBJECTS:meshobj>
+)
+target_link_libraries(meshobj_cart PRIVATE const spherical geomagnetic)
