--- a/test/diffusion/CMakeLists.txt
+++ b/test/diffusion/CMakeLists.txt
@@ -1,4 +1,4 @@
-set_directory_properties(PROPERTIES LABELS diffusion)
+set_property(DIRECTORY PROPERTY LABELS diffusion)
 
 cmake_path(SET _tmpdifffn ${CMAKE_CURRENT_BINARY_DIR}/test_diffusion1d.h5)
 
@@ -7,7 +7,6 @@ add_executable(test_diffusion1d test_diffusion1D.f90)
 target_link_libraries(test_diffusion1d PRIVATE PDEparabolic gbsv const
 LAPACK::LAPACK
 h5fortran::h5fortran
-$<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
 )
 
 # WORKING_DIRECTORY is needed to write output file to repeatable path.
