--- a/test/ionization/CMakeLists.txt
+++ b/test/ionization/CMakeLists.txt
@@ -1,4 +1,4 @@
-set_directory_properties(PROPERTIES LABELS ionization)
+set_property(DIRECTORY PROPERTY  LABELS ionization)
 
 add_executable(test_fang test_fang.f90)
 target_link_libraries(test_fang PRIVATE fang fang_run assert const msis::msis_ifc)
