--- a/src/numerical/interpolation/CMakeLists.txt
+++ b/src/numerical/interpolation/CMakeLists.txt
@@ -1,4 +1,4 @@
-set_directory_properties(PROPERTIES LABELS interpolation)
+set_property(DIRECTORY PROPERTY LABELS interpolation)
 
 add_library(interp OBJECT interpolation.f90 interp2d.f90)
 target_link_libraries(interp PRIVATE const)
