--- a/test/io/CMakeLists.txt
+++ b/test/io/CMakeLists.txt
@@ -1,4 +1,4 @@
-set_directory_properties(PROPERTIES LABELS io)
+set_property(DIRECTORY PROPERTY LABELS io)
 
 cmake_path(SET _test_file ${PROJECT_SOURCE_DIR}/test/config/config_example.nml)
 
@@ -20,14 +20,10 @@ endif()
 add_executable(test_dump_write test_dump_write.f90)
 target_link_libraries(test_dump_write PRIVATE errors const
 h5fortran::h5fortran
-$<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
 )
 
 add_executable(test_dump_read test_dump_read.f90)
-target_link_libraries(test_dump_read PRIVATE
-h5fortran::h5fortran
-$<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
-)
+target_link_libraries(test_dump_read PRIVATE h5fortran::h5fortran)
 
 foreach(t root worker input)
   set(f ${CMAKE_CURRENT_BINARY_DIR}/dump_${t}.h5)
