--- a/test/potential/CMakeLists.txt
+++ b/test/potential/CMakeLists.txt
@@ -1,4 +1,4 @@
-set_directory_properties(PROPERTIES LABELS potential)
+set_property(DIRECTORY PROPERTY LABELS potential)
 
 # --- potential 2D test
 
@@ -6,8 +6,9 @@ set(_potential2d_testfile ${CMAKE_CURRENT_BINARY_DIR}/test_potential2d.h5)
 
 add_executable(test_potential2d test_potential2d.f90 $<TARGET_OBJECTS:PDEelliptic>)
 set_target_properties(test_potential2d PROPERTIES LABELS "unit")
-target_link_libraries(test_potential2d PRIVATE const h5fortran::h5fortran MUMPS::MUMPS
-$<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
+target_link_libraries(test_potential2d PRIVATE const
+h5fortran::h5fortran
+MUMPS::MUMPS
 "$<$<BOOL:${MUMPS_HAVE_Scotch}>:Scotch::Scotch;METIS::METIS>"
 )
 # MPISEQ is the MPI-1 Fortran 77 linking in MUMPS--avoids symbol clashes
@@ -17,7 +18,7 @@ $<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
 # nor did adding them in mumps.cmake
 # it seems to have to be right here.
 # test_potential2d has been an intermittent source of link-order issues,
-# where mpi gets linked in the middle instead of at the end.
+# where MPI gets linked in the middle instead of at the end.
 # the TARGET_OBJECTS etc in this directory are a careful effort to avoid this problem
 
 set(_cmd $<TARGET_FILE:test_potential2d> ${_potential2d_testfile})
@@ -57,7 +58,6 @@ set(_potential3d_testfile ${CMAKE_CURRENT_BINARY_DIR}/test_potential3d.h5)
 add_executable(test_potential3d test_potential3d.f90 $<TARGET_OBJECTS:PDEelliptic>)
 set_target_properties(test_potential3d PROPERTIES LABELS "unit")
 target_link_libraries(test_potential3d PRIVATE const h5fortran::h5fortran MUMPS::MUMPS
-$<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
 "$<$<BOOL:${MUMPS_HAVE_Scotch}>:Scotch::Scotch;METIS::METIS>"
 )
 
