--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ endif()
 if(ffilesystem_VERSION VERSION_LESS 3.4.2 AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.1.0)
   #target_link_libraries(ffilesystem::filesystem INTERFACE stdc++fs)
   # function target_link_libraries() should work, but doesn't (CMake bug)
-  set_target_properties(ffilesystem::filesystem PROPERTIES INTERFACE_LINK_LIBRARIES stdc++fs)
+  set_property(TARGET ffilesystem::filesystem PROPERTY INTERFACE_LINK_LIBRARIES stdc++fs)
 endif()
 
 find_package(MPI COMPONENTS C CXX Fortran REQUIRED)
