--- a/test/potential/CMakeLists.txt
+++ b/test/potential/CMakeLists.txt
@@ -1,11 +1,10 @@
-set_property(DIRECTORY PROPERTY LABELS potential)
+set_property(DIRECTORY PROPERTY LABELS "unit;potential")
 
 # --- potential 2D test
 
 set(_potential2d_testfile ${CMAKE_CURRENT_BINARY_DIR}/test_potential2d.h5)
 
 add_executable(test_potential2d test_potential2d.f90 $<TARGET_OBJECTS:PDEelliptic>)
-set_target_properties(test_potential2d PROPERTIES LABELS "unit")
 target_link_libraries(test_potential2d PRIVATE const
 h5fortran::h5fortran
 MUMPS::MUMPS
@@ -31,7 +30,6 @@ FIXTURES_REQUIRED mpi_fxt
 FIXTURES_SETUP gemini_potential_fxt
 RESOURCE_LOCK cpu_mpi
 PROCESSORS ${Ncpu}
-LABELS "unit"
 )
 
 dll_test_path("h5fortran::h5fortran;MUMPS::MUMPS" potential2d)
@@ -44,7 +42,7 @@ COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_potential2d.py ${_
 set_tests_properties(potential2d:python PROPERTIES
 REQUIRED_FILES ${_potential2d_testfile}
 TIMEOUT 10
-LABELS "unit;python"
+LABELS "python"
 FIXTURES_REQUIRED gemini_potential_fxt
 )
 
@@ -56,7 +54,6 @@ endif()
 set(_potential3d_testfile ${CMAKE_CURRENT_BINARY_DIR}/test_potential3d.h5)
 
 add_executable(test_potential3d test_potential3d.f90 $<TARGET_OBJECTS:PDEelliptic>)
-set_target_properties(test_potential3d PROPERTIES LABELS "unit")
 target_link_libraries(test_potential3d PRIVATE const h5fortran::h5fortran MUMPS::MUMPS
 "$<$<BOOL:${MUMPS_HAVE_Scotch}>:Scotch::Scotch;METIS::METIS>"
 )
@@ -71,7 +68,6 @@ FIXTURES_SETUP gemini_potential_fxt
 FIXTURES_REQUIRED mpi_fxt
 RESOURCE_LOCK cpu_mpi
 PROCESSORS ${Ncpu}
-LABELS "unit"
 )
 
 dll_test_path("h5fortran::h5fortran;MUMPS::MUMPS" potential3d)
