remove unused read_ini

--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -10,7 +10,7 @@ add_library(errors OBJECT error_stop.f90)
 target_link_libraries(errors PRIVATE const h5fortran::h5fortran)
 
 # --- config
-add_library(gemini3d_config OBJECT config.f90 config_nml.f90 config_ini.f90)
+add_library(gemini3d_config OBJECT config.f90 config_nml.f90)
 target_link_libraries(gemini3d_config PRIVATE const gemini3d_sysinfo
 ffilesystem::filesystem
 )
