--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -22,7 +22,7 @@ configure_file(output.in.f90 output.f90 @ONLY)
 add_library(io OBJECT io.f90 ${CMAKE_CURRENT_BINARY_DIR}/output.f90
 aurora.f90
 cond.f90
-mag.f90 mag_hdf5.f90
+mag.f90
 plasma_input.f90 plasma_input_hdf5.f90
 plasma_output.f90 plasma_output_hdf5.f90
 milestone.f90
