frontend: own non-mpi reader.

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -41,7 +41,7 @@ add_executable(gemini3d.run gemini3d_run.f90
 $<TARGET_OBJECTS:exe_frontend>
 )
 target_link_libraries(gemini3d.run PRIVATE
-const gemini3d_config timeutils autogrid reader gemini3d_sysinfo
+const gemini3d_config timeutils autogrid gemini3d_sysinfo
 h5fortran::h5fortran
 ffilesystem::filesystem
 )
@@ -51,7 +51,7 @@ add_executable(magcalc.run magcalc_run.f90
 $<TARGET_OBJECTS:exe_frontend>
 )
 target_link_libraries(magcalc.run PRIVATE
-autogrid reader gemini3d_config timeutils const gemini3d_sysinfo
+autogrid gemini3d_config timeutils const gemini3d_sysinfo
 h5fortran::h5fortran
 ffilesystem::filesystem
 )
