--- a/test/potential/CMakeLists.txt
+++ b/test/potential/CMakeLists.txt
@@ -7,10 +7,8 @@ set(_potential2d_testfile ${CMAKE_CURRENT_BINARY_DIR}/test_potential2d.h5)
 add_executable(test_potential2d test_potential2d.f90 $<TARGET_OBJECTS:PDEelliptic>)
 set_target_properties(test_potential2d PROPERTIES LABELS "unit")
 target_link_libraries(test_potential2d PRIVATE const h5fortran::h5fortran MUMPS::MUMPS
-$<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
 "$<$<BOOL:${MUMPS_HAVE_Scotch}>:Scotch::Scotch;METIS::METIS>"
 )
-# MPISEQ is the MPI-1 Fortran 77 linking in MUMPS--avoids symbol clashes
 
 # LINK_INTERFACE_MULTIPLICITY and IMPORTED_LINK_INTERFACE_MULTIPLICITY do not help here.
 # adding INTERFACE to Mumps project didn't help either
@@ -20,10 +18,8 @@ $<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
 # where mpi gets linked in the middle instead of at the end.
 # the TARGET_OBJECTS etc in this directory are a careful effort to avoid this problem
 
-set(_cmd $<TARGET_FILE:test_potential2d> ${_potential2d_testfile})
-if(mpi)
-  list(PREPEND _cmd ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu})
-endif()
+set(_cmd ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu} $<TARGET_FILE:test_potential2d> ${_potential2d_testfile})
+
 add_test(NAME potential2d COMMAND ${_cmd})
 set_tests_properties(potential2d PROPERTIES TIMEOUT 30
 FIXTURES_REQUIRED mpi_fxt
@@ -57,14 +53,11 @@ set(_potential3d_testfile ${CMAKE_CURRENT_BINARY_DIR}/test_potential3d.h5)
 add_executable(test_potential3d test_potential3d.f90 $<TARGET_OBJECTS:PDEelliptic>)
 set_target_properties(test_potential3d PROPERTIES LABELS "unit")
 target_link_libraries(test_potential3d PRIVATE const h5fortran::h5fortran MUMPS::MUMPS
-$<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
 "$<$<BOOL:${MUMPS_HAVE_Scotch}>:Scotch::Scotch;METIS::METIS>"
 )
 
-set(_cmd $<TARGET_FILE:test_potential3d> ${_potential3d_testfile})
-if(mpi)
-  list(PREPEND _cmd ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu})
-endif()
+set(_cmd ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu} $<TARGET_FILE:test_potential3d> ${_potential3d_testfile})
+
 add_test(NAME potential3d COMMAND ${_cmd})
 set_tests_properties(potential3d PROPERTIES TIMEOUT 30
 FIXTURES_SETUP gemini_potential_fxt
