--- a/test/io/CMakeLists.txt
+++ b/test/io/CMakeLists.txt
@@ -1,6 +1,6 @@
-set_property(DIRECTORY PROPERTY  LABELS io)
+set_property(DIRECTORY PROPERTY LABELS io)
 
-cmake_path(SET _test_file ${PROJECT_SOURCE_DIR}/test/config/config_example.nml)
+set(_test_file ${PROJECT_SOURCE_DIR}/test/config/config_example.nml)
 
 add_executable(test_namelist test_nml.f90)
 add_test(NAME Fortran_namelist COMMAND test_namelist ${_test_file})
