--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,5 @@
-cmake_minimum_required(VERSION 3.19...3.25)
+cmake_minimum_required(VERSION 3.17...3.25)
 # CMake presets require >= 3.21
-
-file(READ ${CMAKE_CURRENT_LIST_DIR}/codemeta.json _j)
-string(JSON PROJECT_VERSION GET ${_j} version)
 
 # --- CMAKE_BUILD_TYPE default
 # Normally we shouldn't set a default like this, but the simulations are 10x slower
@@ -20,7 +17,7 @@ LANGUAGES C CXX Fortran
 # Gemini3D is Fortran, but external libraries use C, and some find_package need C.
 DESCRIPTION "3-D ionospheric model"
 HOMEPAGE_URL https://github.com/gemini3d/gemini
-VERSION ${PROJECT_VERSION}
+VERSION 1.6.1
 )
 
 enable_testing()  # keep this so BUILD_TESTING=off doesn't remove all tests
